# DOMIAS

./: .gitignore  LICENSE  README.md  baselines.py  domias_main.py  setup.cfg  setup.py  temp_debug_scores.npy
.github/workflows/: test.yml
bnaf/: bnaf.py
bnaf/optim/: adam.py  adamax.py
datasets/: __init__.py
experiments/: celeba_eval.py  celeba_gen.py  domias_main.py  run_tabular.sh
experiments/datasets/: healthcare.py
metrics/: evaluation.py
src/domias/: baselines.py  evaluator.py  version.py
src/domias/bnaf/: __init__.py  bnaf_den_est.py  density_estimation.py  train_real_bnaf.py
src/domias/metrics/: compute_wd.py
src/domias/models/: ctgan.py  generator.py
tests/: conftest.py  test_domias.py
